--- a/packages/landing-gatsby/package.json
+++ b/packages/landing-gatsby/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^2.1.3",
     "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-sharp": "^2.2.1",
+    "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "rc-drawer": "^1.10.1",
     "rc-progress": "^2.3.0",
